# ToDoCon

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: action.yaml
bot/: admin.py  models.py
bot/management/: _chat.py  _state.py
bot/management/commands/: runbot.py
bot/migrations/: 0001_initial.py  0002_alter_tguser_telegram_chat_id_and_more.py
bot/tg/: client.py
core/: admin.py  models.py  serializers.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_alter_user_avatar.py
deploy/: .env  docker-compose-ci.yaml  nginx.conf
goals/: admin.py  filters.py  models.py  permissions.py  serializers.py  urls.py  views.py
goals/migrations/: 0001_initial.py  0002_rename_name_goalcategory_title.py  0003_goal.py  0004_rename_deadline_goal_due_date.py  0005_goalcomment.py  0006_alter_goal_category_alter_goal_description_and_more.py  0007_board_goalcategory_board_boardparticipant.py  0008_create_new_objects.py  0009_alter_goalcategory_board.py  0010_alter_goal_category_alter_goal_description_and_more.py
tests/: conftest.py  factories.py
tests/bot/: test_client.py
tests/core/: test_change_password.py  test_log_in.py  test_profile.py  test_sign_up.py
tests/goals/board/: test_board_create.py  test_board_retrieve_update_delete.py  test_boards_list.py
tests/goals/category/: test_categories_create.py  test_categories_list.py  test_category_retrieve_update_destroy.py
tests/goals/comment/: test_comment_create.py  (+2 more)
todolist/: settings.py  urls.py
(+3 files in other folders)
